# le-min

./: 24  CMakeLists.txt  Makefile  README.md  a.out  c.txt  checklinks.c  drawlinks.c  ft_algoexit.c  ft_error.c  ft_logic.c  ft_resout.c  le-min.c  le-min.h  le_min.c  le_visual.c  lem-in  lem_in.c  llll.c  lol  pro  seg  tesssss.c  test  ts  uuu
Includes/: le-min.h  le_min.h
eeee/: 24  Makefile  ft_error.c  ft_logic.c  ft_resout.c  le_min.c  lem-in
eeee/Includes/: le_min.h
includes/: lem_in.h
libft/: Makefile
libft/Includes/: ft_printf.h  libft.h
srcs/: drawlinks.c  ft_algoexit.c  ft_error.c  ft_logic.c  ft_resout.c  le_visual.c
